# gwas-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MCP_REGISTRY_GUIDE.md  MCP_SERVERS_LIST_ENTRY.md  README.md  pyproject.toml  requirements.txt  run_server.py  server.json  test_resources.py  test_server_ipc.py  verify_fallback.py
config/: claude_desktop_config.json
src/gwas_mcp/: __init__.py  server.py
src/gwas_mcp/resources/: __init__.py  db_resources.py
src/gwas_mcp/tools/: __init__.py  advanced_tools.py  analysis_tools.py  annotation_tools.py  clinical_tools.py  post_gwas_tools.py  protein_tools.py  qc_tools.py  structure_tools.py  visualization_tools.py
src/gwas_mcp/utils/: __init__.py  file_handlers.py  validators.py
tests/: __init__.py  conftest.py  test_analysis_tools.py  test_validators.py
